# Cloud-Run-Day-Workshop-2025

./: Readme.md
workshop1/: main.py  requirements.txt
workshop1/news_assistant_agent/: .env  agent.py
workshop2/gcs-mcp-server/: Dockerfile  main.py  requirements.txt
workshop2/news-gcs-agent-service/: Dockerfile  main.py  requirements.txt
workshop2/news-gcs-agent-service/news_assistant_agent/: __init__.py  agent.py
workshop3/: Readme.md
workshop3/a2a-demo/: pyproject.toml
workshop3/a2a-demo/orchestrator/: Dockerfile  __main__.py  main.py  pyproject.toml
workshop3/a2a-demo/orchestrator/agent/: agent.py
workshop3/a2a-demo/remote_agents/: pyproject.toml
workshop3/a2a-demo/remote_agents/business_analyzer_agent/: Dockerfile  __main__.py  agent.py  agent_executor.py  pyproject.toml
workshop3/a2a-demo/remote_agents/sentiment_analyzer_agent/: Dockerfile  __main__.py  agent.py  agent_executor.py  pyproject.toml
workshop4/news_agent_service/: Dockerfile  main.py  requirements.txt
workshop4/news_agent_service/news_agent/: .env  agent.py
workshop4/ollama-server/: Dockerfile
